
- Fix bug #3994, ConcurrentModificationException in ProperyManager. (Dale Anson)

- Fix bug #4002, too short horizontal scrollbar after view resize. (Dale Anson)

- Fix bug #3773, InvocationTargetException with negative printing tab width.
  (Dale Anson)
  
- Fix bug # 2844, printing range bug. (Dale Anson) 

- Delete a user mode from the catalog even if the mode file is missing
  (Eric Le Lay)
}}}
{{{ UI Improvements

- Feature Request #520 Environment variables in Find dialog Directory
  (Alan Ezust)

- UI clean up, button spacing, borders, etc. (Dale Anson)

- Implemented feature request #493, ask for confirmation before closing all
  buffers. (Dale Anson)

- Refactor editing option pane into several tabs, allow user editing of modes
  lists, similar to editing the encoding options lists. This also fixes
  feature request #515. (Dale Anson)
  
- Updated NumericTextField to allow decimal numbers and only allow negative sign
  at the start of a number. (Dale Anson)    

}}}
{{{ Miscellaneous
- Updated printing system with jEdit specific printer dialog, accurate page 
  range printing, current page printing, printing of selected text only, ability 
  to show page breaks in the text area. (Dale Anson)  

}}}
{{{ API Changes

- new org.gjt.sp.utils.GenericGUIUtilities class, containing bits of
  org.gjt.sp.jedit.GUIUtilities suitable for the standalone TextArea
  package; all methods kept but deprecated and proxies (Eric Le Lay).

- refactor Help table of contents loading code to a separate class
  (HelpTOCLoader). Make relevant members public, so the help TOC
  is accessible to other code, e.g. the HelpServer plugin (Eric Le Lay).

}}}
{{{ Editing

- Unicode brackets (Patch #566 - Makarius)

- Updates for objectrexx mode (Patch #585 - Jack J. Woehr)

- Mode for m4 macro processor language (Patch #586 - Jack J. Woehr)

- Drawj2d edit mode (Patch #573 - A. Vontobel)

- Rust edit mode raw string fix (Patch #575 -  Jordan Miner)
