@@ -974,23 +974,19 @@ class InstallPanel extends JPanel implements EBComponent
 			{
 				Entry entry = (Entry) pluginModel.filteredEntries
 					.get(table.getSelectedRow());
-				String pattern = "<b>{0}</b>: {1}<br><b>{2}</b>: {3}<br>{4}<br><br><b>{5}</b>:<br>{6}";
+				String pattern = "<b>{0}</b>: {1}<br><b>{2}</b>: {3}<br><br>{4}";
 				List<String> params = new ArrayList<String>();
 				params.add(jEdit.getProperty("install-plugins.info.author", "Author"));
 				params.add(entry.author);
 				params.add(jEdit.getProperty("install-plugins.info.released", "Released"));
 				params.add(entry.date);
 				params.add(entry.description);
-				if (entry.dependencies == null || entry.dependencies.isEmpty())
+				if (entry.dependencies != null && !entry.dependencies.isEmpty())
 				{
-					pattern = "<b>{0}</b>: {1}<br><b>{2}</b>: {3} {4}";
-				}
-				else
-				{
+					pattern += "<br><br><b>{5}</b>:<br>{6}";
 					params.add(jEdit.getProperty("install-plugins.info.depends", "Depends on"));
 					StringList sl = StringList.split(entry.dependencies, "\n");
 					params.add(sl.join(", "));
-					// params.add(entry.dependencies.replaceAll("\n", ", "));
 				}
 				text = MessageFormat.format(pattern, params.toArray());
 			}
